k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chitieu-service
  labels:
    app: chitieu
spec:
  selector:
    app: chitieu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
